--- a/src/app/user/compare-societies/compare-societies.component.html
+++ b/src/app/user/compare-societies/compare-societies.component.html
@@ -6,21 +6,22 @@
 
         <div class="row compare-heading text-white ">
             <div class="col-12 d-flex justify-content-center">
-                <h1 class="col-4 text-center">Compare countless Societies!</h1>
+                <h1 class="col-12 text-center">Compare countless Societies!</h1>
             </div>
             <div class="col-12 d-flex justify-content-center mt-4">
                 <button class="button-background text-white pt-3 pb-3 pr-5 pl-5 ">Compare Societies</button>
             </div>
         </div>
     </div>
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center text-center">
+      <h1 class="what-is-esocietybazaar mt-4 ml-auto">What is eSocietyBazaar?</h1>
         <div class="col-4 text-center">
-            <h1 class="what-is-esocietybazaar mt-4 ">What is eSocietyBazaar?</h1>
+            
         </div>
       
     </div>
     <div class="row d-flex justify-content-center">
-        <div class="col-6">
+        <div class="col-lg-6 col-10">
             <p class="what-is-esocietybazaar-body text-center">eSocietyBazaar is an all-in-one aggregating portal which
                 seamlessly connects Cooperative Societies to end users & service providers. End Users, along with
                 Societies can take advantage of the Online Payment Facilities which eSocietyBazaar automatically
