--- a/src/app/user/slider/slider.component.html
+++ b/src/app/user/slider/slider.component.html
@@ -34,7 +34,15 @@
     </button>
 
     <div class="glider" style="display: flex;">
-      <div class="card col-lg-2 col-3 m-3">
+    
+    
+    
+    
+    
+    
+    
+    
+        <div class="card col-lg-2 col-4 m-lg-3">
         <div class="row">
             <div class="col-12 cardtopbar text-center text-white"
                 style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
@@ -103,7 +111,14 @@
             <img src="../../../assets/star.jpeg" height="13px" width="13px" />
         </div>
     </div>
-    <div class="card col-lg-2 col-3 m-3">
+
+
+
+
+
+
+
+    <div class="card col-lg-2 col-4 m-lg-3">
       <div class="row">
           <div class="col-12 cardtopbar text-center text-white"
               style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
@@ -172,7 +187,15 @@
           <img src="../../../assets/star.jpeg" height="13px" width="13px" />
       </div>
   </div>
-  <div class="card col-lg-2 col-3 m-3">
+
+
+
+
+
+
+
+
+  <div class="card col-lg-2 col-4 m-lg-3">
     <div class="row">
         <div class="col-12 cardtopbar text-center text-white"
             style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
@@ -241,7 +264,83 @@
         <img src="../../../assets/star.jpeg" height="13px" width="13px" />
     </div>
 </div>
-<div class="card col-lg-2 col-3 m-3">
+
+
+
+
+
+<div class="card col-lg-2 col-4 m-lg-3">
+  <div class="row">
+      <div class="col-12 cardtopbar text-center text-white"
+          style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
+              src="../../../assets/bookmark.png" height="50px" width="50px"
+              style="position: relative; top: -8px; left: -50px;" /><strong>9% Intrest on Deposit*</strong>
+      </div>
+  </div>
+  <div class="card-body">
+      <div class="row cardheading d-flex justify-content-center">
+          <div class="col-10 text-center">Sanskrit & Hindi Credit Limit</div>
+      </div>
+      <div class="row d-flex justify-content-center">West Kalka Baagh, New Delhi</div>
+      <div class="row d-flex justify-content-center">
+          <div class="col-3 ml-2 mt-3">
+              <i class="row d-flex justify-content-center fas fa-users"
+                  style="color: rgba(91, 91, 91, 1);"></i>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">1520</div>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">members
+              </div>
+          </div>
+          <div class="col-3 mr-2 mt-3">
+              <i class="row d-flex justify-content-center fas fa-tag" style="color: rgba(91, 91, 91, 1);"></i>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">₹250/-
+              </div>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Member fee
+              </div>
+          </div>
+          <div class="col-3 mr-3 mt-3">
+              <i class="row d-flex justify-content-center fas fa-money-check"
+                  style="color: rgba(91, 91, 91, 1);"></i>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">
+                  ₹1,10,20,000/-</div>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Share cap
+              </div>
+          </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+          <div class="col-3 mr-3 mt-3 mb-3">
+              <i class="row d-flex justify-content-center fas fa-rupee-sign"
+                  style="color: rgba(91, 91, 91, 1);"></i>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">
+                  ₹15,56,110/-</div>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Deposits
+              </div>
+          </div>
+          <div class="col-3 mr-3 mt-3 mb-3">
+              <i class="row d-flex justify-content-center fas fa-book-open"
+                  style="color: rgba(91, 91, 91, 1);"></i>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">
+                  ₹15,45,110/-</div>
+              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Loans</div>
+          </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+          <div class="col-6 text-center">
+              <button class="btn btn-primary cardviewbutton pt-2 pb-2 pl-4 pr-4"
+                  style="background-color: rgba(45, 211, 145, 1)!important;">view</button>
+          </div>
+      </div>
+  </div>
+  <div class="card-footer"> <img src="../../../assets/star.jpeg" height="13px" width="13px" />
+      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
+      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
+      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
+      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
+  </div>
+</div>
+
+
+
+<div class="card col-lg-2 col-4 m-lg-3">
   <div class="row">
       <div class="col-12 cardtopbar text-center text-white"
           style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
@@ -310,76 +409,11 @@
       <img src="../../../assets/star.jpeg" height="13px" width="13px" />
   </div>
 </div>
-<div class="card col-lg-2 col-3 m-3">
-  <div class="row">
-      <div class="col-12 cardtopbar text-center text-white"
-          style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
-              src="../../../assets/bookmark.png" height="50px" width="50px"
-              style="position: relative; top: -8px; left: -50px;" /><strong>9% Intrest on Deposit*</strong>
-      </div>
-  </div>
 
-  <div class="card-body">
-      <div class="row cardheading d-flex justify-content-center">
-          <div class="col-10 text-center">Sanskrit & Hindi Credit Limit</div>
-      </div>
-      <div class="row d-flex justify-content-center">West Kalka Baagh, New Delhi</div>
-      <div class="row d-flex justify-content-center">
-          <div class="col-3 ml-2 mt-3">
-              <i class="row d-flex justify-content-center fas fa-users"
-                  style="color: rgba(91, 91, 91, 1);"></i>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">1520</div>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">members
-              </div>
-          </div>
-          <div class="col-3 mr-2 mt-3">
-              <i class="row d-flex justify-content-center fas fa-tag" style="color: rgba(91, 91, 91, 1);"></i>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">₹250/-
-              </div>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Member fee
-              </div>
-          </div>
-          <div class="col-3 mr-3 mt-3">
-              <i class="row d-flex justify-content-center fas fa-money-check"
-                  style="color: rgba(91, 91, 91, 1);"></i>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">
-                  ₹1,10,20,000/-</div>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Share cap
-              </div>
-          </div>
-      </div>
-      <div class="row d-flex justify-content-center">
-          <div class="col-3 mr-3 mt-3 mb-3">
-              <i class="row d-flex justify-content-center fas fa-rupee-sign"
-                  style="color: rgba(91, 91, 91, 1);"></i>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">
-                  ₹15,56,110/-</div>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Deposits
-              </div>
-          </div>
-          <div class="col-3 mr-3 mt-3 mb-3">
-              <i class="row d-flex justify-content-center fas fa-book-open"
-                  style="color: rgba(91, 91, 91, 1);"></i>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 700;">
-                  ₹15,45,110/-</div>
-              <div class="row cardcontent d-flex justify-content-center" style="font-weight: 400;">Loans</div>
-          </div>
-      </div>
-      <div class="row d-flex justify-content-center">
-          <div class="col-6 text-center">
-              <button class="btn btn-primary cardviewbutton pt-2 pb-2 pl-4 pr-4"
-                  style="background-color: rgba(45, 211, 145, 1)!important;">view</button>
-          </div>
-      </div>
-  </div>
-  <div class="card-footer"> <img src="../../../assets/star.jpeg" height="13px" width="13px" />
-      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
-      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
-      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
-      <img src="../../../assets/star.jpeg" height="13px" width="13px" />
-  </div>
-</div>
-<div class="card col-lg-2 col-3 m-3">
+
+
+
+<div class="card col-lg-2 col-4 m-lg-3">
   <div class="row">
       <div class="col-12 cardtopbar text-center text-white"
           style="background: linear-gradient(90deg, rgba(46,160,115,1) 0%, rgba(213,255,234,1) 100%);"><img
