--- a/src/app/user/userbodysection1/userbodysection1.component.html
+++ b/src/app/user/userbodysection1/userbodysection1.component.html
@@ -16,19 +16,29 @@
     <p class="col-lg-8 col-12">Are you struggling to find a society in your
         area that fills all your needs? Don't have time to go to society offices make deposits? Select a location.</p>
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-11">
             <div class="row">
-                <div class="col-lg-3 d-flex justify-content-center p-3 mr-lg-4 mt-3 btnhover1"
+                <div class="col-lg-1 d-flex justify-content-center p-3 mr-lg-4 mt-3 btnhover1 "
                     style="border-radius: 12px !important; box-shadow: 0px 0px 24px 1px rgba(0,0,0,0.38);">
                     <img src="../../../assets/mumbai.png" height="55px" alt="">
                 </div>
-                <div class="col-lg-3 d-flex justify-content-center p-3 mr-lg-4 mt-3 btnhover1"
+                <div class="col-lg-1 d-flex justify-content-center p-3 mr-lg-4 mt-3 btnhover1"
                     style="border-radius: 12px !important;  box-shadow: 0px 0px 24px 1px rgba(0,0,0,0.38);">
                     <img src="../../../assets/taj-mahal.png" height="55px" alt="">
                 </div>
-                <div class="col-lg-3 d-flex justify-content-center p-3 mr-lg-4 mt-3 btnhover1"
+                <div class="col-lg-1 d-flex justify-content-center p-3 mr-lg-4 mt-3 btnhover1"
                     style="border-radius: 12px !important;  box-shadow: 0px 0px 24px 1px rgba(0,0,0,0.38);">
                     <img src="../../../assets/gate-of-india.png" height="55px" alt="">
+                </div>
+                <div class="col-lg-3 mt-5 d-flex justify-content-center">
+                    
+                    <select class="form-control select">
+                        <!-- <i class="fas fa-location-arrow" style="color: blue;"></i>  -->
+                        <option>Enter Your Location</option>
+                        <option>Location 1</option>
+                        <option>Location 2</option>
+                        <option>Location 3</option>
+                    </select>
                 </div>
 
             </div>
@@ -40,14 +50,14 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-9">
             <div class="row ml-1 mt-3">
-                <div class="dropdown col-lg-4 col-12 mt-3">
+                <div class="dropdown col-lg-4 col-12 mt-3 d-flex justify-content-center">
                     <button class="btn btnhover1 col-12 dropdown-toggle btnradius" type="button" data-toggle="dropdown"
                         style="color: rgba(91, 91, 91, 1);"> <i class="fas fa-piggy-bank"
                             style="color: rgba(31, 180, 122, 1);"></i> Credit Society
                     </button>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu col-12">
                         <li><a href="#">value 1</a></li>
                         <li><a href="#">value 2</a></li>
                         <li><a href="#">value 3</a></li>
@@ -55,9 +65,9 @@
                 </div>
                 <div class="col-lg-3 col-3 mt-4 text-center mt-2" style="color: rgba(31, 180, 122, 1);">Now Select,
                 </div>
-                <div class="col-lg-2 col-3 mt-3"><button class="btn btnhover1 btnradius" type="button"
+                <div class="col-lg-2 col-3 mt-3 mr-2"><button class="btn btnhover1 btnradius" type="button"
                         style="color: rgba(91, 91, 91, 1);">Deposits</button></div>
-                <div class="col-lg-3 col-3 mt-3"><button class="btn btnhover1 btnradius" type="button"
+                <div class="col-lg-2 col-3 mt-3 ml-2"><button class="btn btnhover1 btnradius" type="button"
                         style="color: rgba(91, 91, 91, 1);">Loans</button></div>
             </div>
         </div>
