--- a/src/app/user/userbodysection1/userbodysection1.component.css
+++ b/src/app/user/userbodysection1/userbodysection1.component.css
@@ -93,9 +93,30 @@
     text-decoration: none;
     color: black;
 }
+ 
+.select{
+    color: rgba(31, 180, 122, 1);
+ 
+}
+.form-control{
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.21);
+
+}
+.form-control:focus{
+    border: none;
+    outline:0 none;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.21);
+    border-radius: 10;
+}
 @media screen and (max-width:992px){
     .marginclass{
         position: relative;
         top: 0px;
     }
+    ul li{
+        border: solid 1px black;
+        margin: 5px;
+        border-radius: 5px;
+    } 
+    
 }
