--- a/src/app/user/compare-societies/compare-societies.component.html
+++ b/src/app/user/compare-societies/compare-societies.component.html
@@ -13,8 +13,8 @@
             </div>
         </div>
     </div>
-    <div class="row d-flex justify-content-center text-center">
-      <h1 class="what-is-esocietybazaar mt-4 ml-auto">What is eSocietyBazaar?</h1>
+    <div class="row text-center">
+      <h1 class="what-is-esocietybazaar mt-4 col-12 text-center">What is eSocietyBazaar?</h1> 
         <div class="col-4 text-center">
             
         </div>
